pushed what is currently packaging

--- a/Wave/Config/DefaultEngine.ini
+++ b/Wave/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/MainMenu.MainMenu
+EditorStartupMap=/Game/MainMenu.MainMenu
 GlobalDefaultGameMode="/Script/Wave.WaveGameMode"
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -21,4 +21,3 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-2000.000000
-
